Fixed spacing of blog containers on homepage on mobile view

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -898,6 +898,9 @@ footer {
 		.-row {
 			margin: 0;
 		}
+		.home-blog-container {
+			margin-top: 100px;
+		}
 	}
 }
 
